--- a/Source/MetrologyTaxonomy/MT_Editor/Views/AllView.xaml
+++ b/Source/MetrologyTaxonomy/MT_Editor/Views/AllView.xaml
@@ -21,7 +21,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition MaxHeight="900"/>
         </Grid.RowDefinitions>
 
         <TextBlock HorizontalAlignment="Left" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Text="Taxonomy" Grid.Row="0" Margin="0 30 0 0"/>
@@ -40,7 +40,7 @@
             </TextBox>            
         </Grid>
         <ListView Margin="0 10 0 0" Grid.Row="2" ItemsSource="{Binding Taxonomy, Mode=TwoWay}" SelectedItem="{Binding SelectedTaxon, Mode=TwoWay}" 
-                    SelectionMode="Single" x:Name="TaxonomyList">
+                    SelectionMode="Single" x:Name="TaxonomyList" ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel MaxWidth="650">
